# chess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  vcpkg.json
src/: board.cpp  board.hpp
tests/: testMain.cpp
vcpkg-ports/clipp/: CONTROL  portfile.cmake
